--- a/鸭哥926.yaml
+++ b/鸭哥926.yaml
@@ -32,6 +32,7 @@ proxy-groups:
   - {name: 🌏 国内媒体, type: select, proxies: [🎯 全球直连, 🇨🇳 台湾节点, 🇭🇰 香港节点, 🚀 节点选择]}
   - {name: Ⓜ️ 微软服务, <<: *o2}
   - {name: 🍎 苹果服务, <<: *o2}
+  - {name: ⚡️ Speedtest, <<: *o2}
   - {name: 🎮 游戏平台, <<: *o2}
   - {name: 🔰 下载平台, <<: *o2}
   - {name: 🎯 全球直连, type: select, proxies: [DIRECT,REJECT]}
@@ -71,6 +72,7 @@ rules:
   - RULE-SET,ChinaMedia,🌏 国内媒体
   - RULE-SET,Microsoft,Ⓜ️ 微软服务
   - RULE-SET,Apple,🍎 苹果服务
+  - RULE-SET,Speedtest,⚡️ Speedtest
   - RULE-SET,Geosite_cn,🎯 全球直连
   - RULE-SET,Geosite_private,🎯 全球直连
   - RULE-SET,ChinaDomain,🎯 全球直连
@@ -154,6 +156,9 @@ rule-providers:
   Apple:
     <<: *pc
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple_Classical_No_Resolve.yaml"
+  Speedtest:
+    <<: *pc
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Speedtest/Speedtest_No_Resolve.yaml"
   Geosite_cn:
     <<: *pd
     url: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/cn.yaml"
